--- a/src/styles/pages/style.scss
+++ b/src/styles/pages/style.scss
@@ -2,7 +2,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #F5F8FB;
-  font-family: "Bakbak One", Arial, sans-serif;
+  // font-family: "Bakbak One", Arial, sans-serif;
   background: #0D0D15;
 }
 
