--- a/src/templates/pages/index/index.njk
+++ b/src/templates/pages/index/index.njk
@@ -1,6 +1,6 @@
-{% extends 'layouts/index/layout.njk' %}
+{% extends 'layouts/index/base.njk' %}
 
 {% block content %}
-  {% include 'blocks/banner.njk' %}
-  {% include 'blocks/catalog-slider.njk' %}
+  {% include 'partials/banner.njk' %}
+  {% include 'partials/catalog-slider.njk' %}
 {% endblock %}
