--- a/src/templates/layouts/index/base.njk
+++ b/src/templates/layouts/index/base.njk
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Homepage</title>
+    <title>{{ title }}</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,15 +15,17 @@
   </head>
 
   <body>
-      {% include '../../blocks/header.njk' %}
-	    {% block content %}{% endblock %}
-      {% include '../../blocks/footer.njk' %}
+      {% include '../../partials/header.njk' %}
+      <main>
+	      {% block content %}{% endblock %}
+      </main>
+      {% include '../../partials/footer.njk' %}
     <!-- Header Section -->
     {#
 
     <main>
 
-      
+
 
       <!-- Blog Section -->
       <section class="blog">
@@ -278,5 +280,4 @@
 
     #}
   </body>
-
 </html>
