--- a/src/templates/partials/banner.njk
+++ b/src/templates/partials/banner.njk
@@ -1,10 +1,10 @@
-{% set title = "Binabox test" %}
+{% set banner_title = "Binabox test text" %}
 
 <section class="banner">
-  <h1 class="banner__heading">WITH <span class="banner__highlight">{{ title }}</span> EXPLORE NFT COLLECTION!</h1>
+  <h1 class="banner__heading">WITH <span class="banner__highlight">{{ banner_title }}</span> EXPLORE NFT COLLECTION!</h1>
   <p class="banner__text">
           We are the best way to check for the rarity of your NFT
-          <span class="banner__highlight">collection</span>
+          <span class="banner__highlight">{{ banner_title }}</span>
   </p>
   <div class="banner__stats">
     <p class="banner__stat-label">Total IT Team</p>
