--- a/src/templates/pages/index/index.njk
+++ b/src/templates/pages/index/index.njk
@@ -3,4 +3,207 @@
 {% block content %}
   {% include 'partials/banner.njk' %}
   {% include 'partials/catalog-slider.njk' %}
+  {% include 'partials/blog.njk' %}
 {% endblock %}
+
+<!-- Blog Section -->
+      <section class="blog">
+        <h2 class="blog__title">Our blog</h2>
+        <div class="blog__container">
+          <ul class="blog__list">
+            <li class="blog-item">
+              <img src="src\images\static\blog-post-potrait.webp" height="664" width="736" alt="Blog Post 1"
+                class="blog-item__image" />
+              <span class="blog-item__tag">NFT</span>
+              <div class="blog-item__meta">
+                <p class="blog-item__author">Tony Nguyen</p>
+                <time datetime="2022-06-20" class="blog-item__date">20 Jun 2022</time>
+              </div>
+              <h3 class="blog-item__post-title">Sonic live</h3>
+              <p class="blog-item__excerpt">
+                One September 22, 2021 A volutpat nulla eros, nulla ultrices nec
+                nulla imperdiet...
+              </p>
+              <a href="#" target="_blank" class="blog-item__link">READMORE</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- About Us Section -->
+      <section class="about-us">
+        <h2 class="about-us__title">About Us</h2>
+        <p class="about-us__description">
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+          dolore...
+        </p>
+        <div class="about-us__list-wrapper">
+          <ol class="about-us__list">
+            <li class="about-us__list-item">
+              <span class="about-us__number">01</span>
+              <h3 class="about-us__list-item-title">High Quality</h3>
+              <p class="about-us__list-item-description">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </li>
+            <li class="about-us__list-item">
+              <span class="about-us__number">02</span>
+              <h3 class="about-us__list-item-title">Big Collection</h3>
+              <p class="about-us__list-item-description">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </li>
+            <li class="about-us__list-item">
+              <span class="about-us__number">03</span>
+              <h3 class="about-us__list-item-title">Top Resource</h3>
+              <p class="about-us__list-item-description">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </li>
+            <li class="about-us__list-item">
+              <span class="about-us__number">04</span>
+              <h3 class="about-us__list-item-title">Big Community</h3>
+              <p class="about-us__list-item-description">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </li>
+          </ol>
+        </div>
+      </section>
+
+      <!-- Team Section -->
+      <section class="team">
+        <h2 class="team__title">Our Team</h2>
+        <article class="team-card">
+          <img src="src\images\static\team-photo-jason-smith.webp" alt="Jason Smith" class="team-card__image" />
+          <h3 class="team-card__name">Jason Smith</h3>
+          <p class="team-card__role">Co - Founder</p>
+          <div class="team-card__socials">
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\twitter-icon.webp"
+                alt="Twitter" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\facebook-icon.webp"
+                alt="Facebook" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\telegram-icon.webp"
+                alt="Telegram" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="LinkedIn" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img
+                src="images/icons/tinywow_Property 1=Instagram_77035893.webp" alt="Instagram"
+                class="team-card__social-icon" /></a>
+          </div>
+        </article>
+        <article class="team-card">
+          <img src="src\images\static\team-photo-jason-smith.webp" alt="Jason Smith" class="team-card__image" />
+          <h3 class="team-card__name">Jason Smith</h3>
+          <p class="team-card__role">Co - Founder</p>
+          <div class="team-card__socials">
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\twitter-icon.webp"
+                alt="Twitter" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\facebook-icon.webp"
+                alt="Facebook" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\telegram-icon.webp"
+                alt="Telegram" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="LinkedIn" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="Instagram" class="team-card__social-icon" /></a>
+          </div>
+        </article>
+        <article class="team-card">
+          <img src="src\images\static\team-photo-jason-smith.webp" alt="Jason Smith" class="team-card__image" />
+          <h3 class="team-card__name">Jason Smith</h3>
+          <p class="team-card__role">Co - Founder</p>
+          <div class="team-card__socials">
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\twitter-icon.webp"
+                alt="Twitter" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\facebook-icon.webp"
+                alt="Facebook" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\telegram-icon.webp"
+                alt="Telegram" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="LinkedIn" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="Instagram" class="team-card__social-icon" /></a>
+          </div>
+        </article>
+        <article class="team-card">
+          <img src="src\images\static\team-photo-jason-smith.webp" alt="Jason Smith" class="team-card__image" />
+          <h3 class="team-card__name">Jason Smith</h3>
+          <p class="team-card__role">Co - Founder</p>
+          <div class="team-card__socials">
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\twitter-icon.webp"
+                alt="Twitter" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\facebook-icon.webp"
+                alt="Facebook" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\telegram-icon.webp"
+                alt="Telegram" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="LinkedIn" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="Instagram" class="team-card__social-icon" /></a>
+          </div>
+        </article>
+        <article class="team-card">
+          <img src="src\images\static\team-photo-jason-smith.webp" alt="Jason Smith" class="team-card__image" />
+          <h3 class="team-card__name">Jason Smith</h3>
+          <p class="team-card__role">Co - Founder</p>
+          <div class="team-card__socials">
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\twitter-icon.webp"
+                alt="Twitter" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\facebook-icon.webp"
+                alt="Facebook" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\telegram-icon.webp"
+                alt="Telegram" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="LinkedIn" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="Instagram" class="team-card__social-icon" /></a>
+          </div>
+        </article>
+        <article class="team-card">
+          <img src="src\images\static\team-photo-jason-smith.webp" alt="Jason Smith" class="team-card__image" />
+          <h3 class="team-card__name">Jason Smith</h3>
+          <p class="team-card__role">Co - Founder</p>
+          <div class="team-card__socials">
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\twitter-icon.webp"
+                alt="Twitter" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\facebook-icon.webp"
+                alt="Facebook" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\telegram-icon.webp"
+                alt="Telegram" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="LinkedIn" class="team-card__social-icon" /></a>
+            <a class="team-card__social-link" href="#"><img src="src\images\static\icons\instagram-icon.webp"
+                alt="Instagram" class="team-card__social-icon" /></a>
+          </div>
+        </article>
+      </section>
+
+      <!-- FAQ Section -->
+      <section class="faq">
+        <h2 class="faq__title">FAQs</h2>
+        <div class="faq__list">
+          <details class="faq__item">
+            <summary class="faq__question">What are NFTs?</summary>
+            <p class="faq__answer">Urna vitae erat et lacus, consectetur ac nulla vestibulum lobortis...</p>
+          </details>
+          <details class="faq__item">
+            <summary class="faq__question">How do I get NFTs?</summary>
+            <p class="faq__answer">You can buy NFTs on various marketplaces such as OpenSea...</p>
+          </details>
+          <details class="faq__item">
+            <summary class="faq__question">How can we buy your NFTs?</summary>
+            <p class="faq__answer">Urna vitae erat et lacus, consectetur ac nulla vestibulum lobortis. Nulla dapibus
+              urna volutpat venenatis, risus faucibus.</p>
+          </details>
+          <details class="faq__item">
+            <summary class="faq__question">Who are the team behind the project?</summary>
+            <p class="faq__answer">Urna vitae erat et lacus, consectetur ac nulla vestibulum lobortis. Nulla dapibus
+              urna volutpat venenatis, risus faucibus.</p>
+          </details>
+        </div>
+      </section>
