--- a/src/templates/partials/catalog-slider.njk
+++ b/src/templates/partials/catalog-slider.njk
@@ -1,10 +1,8 @@
-{# {% set data = require("./data.json") %} #}
-
 <section class="catalog">
   <div class="catalog__header">
-    <h2 class="catalog__title">{{ catalog-slider.title }}</h2>
+    <h2 class="catalog__title">{{ catalog_slider.title }}</h2>
     <div class="catalog__controls">
-      <a href="#" class="catalog__view-all button button--secondary">{{ catalog-slider.button }}</a>
+      <a href="#" class="catalog__view-all button button--secondary">{{ catalog_slider.button }}</a>
       <div class="catalog__navigation">
         <button class="catalog__nav-btn catalog__nav-btn--prev button button--secondary">&#8592;</button>
         <button class="catalog__nav-btn catalog__nav-btn--next button button--primary">&#8594</button>
@@ -13,64 +11,11 @@
   </div>
   <div class="catalog__grid">
     <ul>
-      {% for item in items %}
+      {% for item in cards %}
         <li>
-          {% include 'blocks/item-card.njk' %}
+          {% include 'partials/item-card.njk' %}
         </li>
       {% endfor %}
     </ul>
-
-    {# <ul class="nft-list">
-            <li class="nft-card">
-              <a href="#" class="nft-card__link">
-                <article class="nft-card__content">
-                  <img class="nft-card__image" src="#" alt="NFT Item 1">
-                  <span class="nft-card__badge nft-card__badge--new">NEW</span>
-                  <p class="nft-card__price">$199</p>
-                  <h3 class="nft-card__title">NAME PRODUCT</h3>
-                </article>
-              </a>
-            </li>
-            <li class="nft-card">
-              <a href="#" class="nft-card__link">
-                <article class="nft-card__content">
-                  <img class="nft-card__image" src="#" alt="NFT Item 2">
-                  <span class="nft-card__badge nft-card__badge--new">NEW</span>
-                  <p class="nft-card__price">$199</p>
-                  <h3 class="nft-card__title">NAME PRODUCT</h3>
-                </article>
-              </a>
-            </li>
-            <li class="nft-card">
-              <a href="#" class="nft-card__link">
-                <article class="nft-card__content">
-                  <img class="nft-card__image" src="#" alt="NFT Item 3">
-                  <span class="nft-card__badge nft-card__badge--sold-out">SOLD OUT</span>
-                  <p class="nft-card__price">$199</p>
-                  <h3 class="nft-card__title">NAME PRODUCT</h3>
-                </article>
-              </a>
-            </li>
-            <li class="nft-card">
-              <a href="#" class="nft-card__link">
-                <article class="nft-card__content">
-                  <img class="nft-card__image" src="#" alt="NFT Item 4">
-                  <span class="nft-card__badge nft-card__badge--new">NEW</span>
-                  <p class="nft-card__price">$199</p>
-                  <h3 class="nft-card__title">NAME PRODUCT</h3>
-                </article>
-              </a>
-            </li>
-            <li class="nft-card">
-              <a href="#" class="nft-card__link">
-                <article class="nft-card__content">
-                  <img class="nft-card__image" src="#" alt="NFT Item 5">
-                  <span class="nft-card__badge nft-card__badge--new">NEW</span>
-                  <p class="nft-card__price">$199</p>
-                  <h3 class="nft-card__title">NAME PRODUCT</h3>
-                </article>
-              </a>
-            </li>
-          </ul> #}
   </div>
 </section>
