--- a/src/templates/partials/header.njk
+++ b/src/templates/partials/header.njk
@@ -6,7 +6,8 @@
     <ul class="main-nav__list">
       {% for item in nav %}
       <li>
-        <a href="{{ item.url }}" class="main-nav__link {% if item.url == path %}main-nav__link--active{% endif %}">
+        <a href="{{ item.url }}"
+          class="main-nav__link {% if item.url !== path %}main-nav__link--active{% endif %}">
           {{ item.text }}</a>
       </li>
       {% endfor %}
